Modification variable scss / Titre HTML

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,5 @@
 // Couleurs principales
+// exemple: $theme-color: #FFFFFF;
 
 // Couleurs utilitaires
 
@@ -7,3 +8,4 @@
 // Position / Dimensions
 
 // Fonts family
+// exemple: $font: 'Roboto', sans-serif;
