--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,2 +1,7 @@
 @import '_reset';
 @import '_variables';
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300;400;500;600;700;800&display=swap');
+
+*{
+    font-family: 'Fira Sans', sans-serif;
+}
